# hsMonitoring

./: .gitignore  CODEOWNERS  NOTICE  README.md  bors.toml  cabal.project  hie.yaml  iohk-monitoring.cabal  stack.yaml
.github/workflows/: ci_linux.yml  ci_linux_944.yml  ci_macos.yml  ci_windows.yml  haskell.yml
contra-tracer/: README.md  contra-tracer.cabal
docs/: Makefile
examples/: lobemo-examples.cabal
examples/complex/: Main.lhs
examples/performance/: README.md
hs-monitoring/: README.md  hs-monitoring.cabal
hs-monitoring/src/Cardano/BM/: Configuration.lhs  Plugin.lhs
hs-monitoring/src/Cardano/BM/Backend/: Switchboard.lhs
hs-monitoring/src/Cardano/BM/Configuration/: Model.lhs
hs-monitoring/src/Cardano/BM/Data/: BackendKind.lhs  Configuration.lhs
hs-monitoring/static/: configuration-editor.html
hs-monitoring/static/css/: configuration-editor.css
hs-monitoring/test/: Test.lhs  config.yaml
hs-monitoring/test/Cardano/BM/Test/: Configuration.lhs
iohk-monitoring/: iohk-monitoring.cabal
iohk-monitoring/examples/complex/: Main.lhs
iohk-monitoring/src/Cardano/BM/: Trace.lhs
iohk-monitoring/src/Cardano/BM/Configuration/: Model.lhs
iohk-monitoring/src/Cardano/BM/Output/: EKGView.lhs  Monitoring.lhs  Switchboard.lhs
iohk-monitoring/test/Cardano/BM/Test/: Configuration.lhs
nix/: iohk-nix-src.json  pkgs.nix
nix/.stack.nix/: iohk-monitoring.nix
plugins/backend-aggregation/: lobemo-backend-aggregation.cabal
plugins/backend-editor/src/Cardano/BM/Backend/: Editor.lhs
plugins/backend-ekg/src/Cardano/BM/Backend/: EKGView.lhs
plugins/backend-graylog/: lobemo-backend-graylog.cabal
plugins/backend-monitoring/: lobemo-backend-monitoring.cabal
plugins/backend-monitoring/test/: Test.lhs
plugins/backend-trace-acceptor/: lobemo-backend-trace-acceptor.cabal
plugins/backend-trace-forwarder/: lobemo-backend-trace-forwarder.cabal
plugins/deprecated_backend-editor/: lobemo-backend-editor.cabal
plugins/deprecated_backend-ekg/: lobemo-backend-ekg.cabal
plugins/scribe-systemd/: lobemo-scribe-systemd.cabal
src/Cardano/BM/: Rotator.lhs
tracer-transformers/: tracer-transformers.cabal
