cabal-version:       2.0
name:                lobemo-backend-aggregation
version:             0.1.0.1
synopsis:            provides a backend implementation to aggregate traced values
-- description:
homepage:            https://github.com/CodiePP/hsMonitoring
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          codieplusplus@apax.net
copyright:           2019-23 IOHK, 2023 Alexander Diemand
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Cardano.BM.Backend.Aggregation
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       hs-monitoring,
                       aeson,
                       async,
                       text,
                       time,
                       safe-exceptions,
                       stm,
                       unordered-containers
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  hs-source-dirs:      src
  default-language:    Haskell2010
