cabal-version:       2.0
name:                lobemo-backend-graylog
version:             0.1.0.1
synopsis:            provides a backend implementation to Graylog
-- description:
homepage:            https://github.com/CodiePP/hsMonitoring
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          codieplusplus@apax.net
copyright:           2019-23 IOHK, 2023 Alexander Diemand
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Cardano.BM.Backend.Graylog
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       hs-monitoring,
                       aeson,
                       async,
                       bytestring,
                       network,
                       safe-exceptions,
                       stm,
                       text,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
