cabal-version:       2.0
name:                lobemo-backend-ekg
version:             0.1.0.2
synopsis:            provides a backend implementation to EKG
-- description:
homepage:            https://github.com/CodiePP/hsMonitoring
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          codieplusplus@apax.net
copyright:           2019-23 IOHK, 2023 Alexander Diemand
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Cardano.BM.Backend.EKGView
  other-modules:       Cardano.BM.Backend.Prometheus
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base,
                       aeson,
                       async,
                       bytestring,
                       ekg,
                       ekg-core,
                       hs-monitoring,
                       safe-exceptions,
                       snap-core,
                       snap-server,
                       stm,
                       text,
                       time,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
